*SVN*

* Set $KCODE to 'u' by default to enable the multibyte safe String#chars proxy. [Koz]

* Added config.plugins to control which plugins are loaded #6269 [skaes]. By default, everything in vendor/plugins will be loaded, but if you specify config.plugins, only those will be loaded. Example:

    config.plugins = %w[ routing_navigator simply_helpful ]

* Clean up html on included error pages. [Tim Lucas]

* Fixed default 404.html and 500.htmls to remove extreme ugliness and include human language [DHH]

* Update to latest Prototype and script.aculo.us trunk versions [Thomas Fuchs]

* PostgreSQL: db:test:purge closes open database connections first.  #6236 [alex]

* Fixed test:uncommitted on Windows (backslash issue) #4999 [paul@paulbutcher.com]

* Fixed migration creation to work with namespaced models, so script/generate model Gallery::Image will use create_table :gallery_images #6327 [BobSilva]

* Fixed rename_table on SQLite tables with indexes defined #5942 [brandon@opensoul.org]

* Added default timeout setting of 5 seconds to SQLite3 database.yml configurations [DHH]

* Added generated attribute options to script/generate model, like the one found in scaffold_resource and resource [DHH]. Examples:

    ./script/generate model post title:string created_on:date body:text published:boolean

* Added script/generate resource which works just like scaffold_resource, but creates empty placeholders instead of predefined [DHH]

* script/runner can run files, pass on arguments, and be used as a shebang.  #6286 [Tuxie, dlpond]
    #!/usr/bin/env /path/to/my/app/script/runner
    # Example: just start using your models as if you are in script/console
    Product.find(:all).each { |product| product.check_inventory }

* Look for rake tasks in plugin subdirs.  #6259 [obrie]

* Added map.connect ':controller/:action/:id.:format' as a default route to config/routes.rb [DHH]

* Updated prototype.js to 1.5.0_rc1 with latest fixes. [Rick Olson]

  - XPATH support