@@ -20,12 +20,14 @@ class MailerGenerator < Rails::Generator::NamedBase
 
       # View template and fixture for each action.
       actions.each do |action|
-        m.template "view.rhtml",
-                   File.join('app/views', class_path, file_name, "#{action}.rhtml"),
-                   :assigns => { :action => action }
-        m.template "fixture.rhtml",
-                   File.join('test/fixtures', class_path, file_name, action),
-                   :assigns => { :action => action }
+        relative_path = File.join(class_path, file_name, "#{action}.rhtml")
+        view_path     = File.join('app/views', relative_path)
+        fixture_path  = File.join('test/fixtures', relative_path)
+
+        m.template "view.rhtml", view_path,
+                   :assigns => { :action => action, :path => view_path }
+        m.template "fixture.rhtml", fixture_path,
+                   :assigns => { :action => action, :path => fixture_path }
       end
     end
   end
