@@ -1,3 +1,3 @@
 <%= class_name %>#<%= action %>
 
-Find me in app/views/<%= file_name %>/<%= action %>.rhtml
+Find me in <%= path %>
